--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ github_username: tomasbasham
 markdown: redcarpet
 highlighter: pygments
 
+redcarpet:
+  extensions: ["no_intra_emphasis", "tables", "autolink", "strikethrough"]
+
 # blog cover
 cover: //cdn.tomasbasham.co.uk/cover.jpg
 
