--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
     share_link: "&amp;url="
 
   - icon: linkedin
-    url: https://uk.linkedin.com/in/tomas-basham-06244646
+    url: https://www.linkedin.com/in/tomas-basham-06244646
     desc: Connect with me linkedin
     share_url: https://www.linkedin.com/shareArticle
     share_title: ?title=
