--- a/_data/companies.yml
+++ b/_data/companies.yml
@@ -32,7 +32,7 @@
   title: "Aerian Studios"
   position: "Software Developer"
   image: "https://dl.dropboxusercontent.com/u/59426690/cdn/aerian.png"
-  url: "http://beta.aerian.com"
+  url: "https://www.aerian.com/"
   duration:
     start: "March 2014"
     end: "July 2014"
