--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
   jekyll:
     <<: *defaults
     command: ["jekyll serve -H 0.0.0.0"]
+    environment:
+      - JEKYLL_GITHUB_TOKEN
     ports:
       - "4000:4000"
 
