--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ social:
       share_link: "&amp;url="
 
   accounts:
-    - name: Github
+    - name: GitHub
       url: https://github.com/tomasbasham
       desc:	Fork me on github
 
