Update development tools

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "3"
 services:
   ruby: &defaults
     build: .
@@ -7,7 +7,7 @@ services:
 
   jekyll:
     <<: *defaults
-    command: ["jekyll serve -H 0.0.0.0"]
+    command: ["jekyll", "serve", "-H", "0.0.0.0"]
     environment:
       - JEKYLL_GITHUB_TOKEN
     ports:
@@ -15,14 +15,4 @@ services:
 
   test:
     <<: *defaults
-    command: ["htmlproofer ./_site --check-favicon --check-html --disable-external"]
-
-  travis:
-    image: tomasbasham/travis:1.8.8
-    volumes:
-      - travis-data:/root/.travis
-      - .:/usr/src/app
-
-volumes:
-  travis-data:
-    external: true
+    command: ["htmlproofer", "./",_"site", "--check-favicon", "--check-html", "--disable-external"]
