--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 ---
 language: ruby
 rvm:
-  - "2.2.0"
+  - "2.3.0"
 
 sudo: false
-cache: bundler
 
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+before_install:
+  - gem install bundler -v 1.13.6
 
 script:
   - bundle exec jekyll build
