--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 script:
   - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --check-favicon --check-html --disable-external
+  - bundle exec htmlproofer ./_site --allow-hash-href --check-favicon --check-html --disable-external
 
 notifications:
   email: false
