Exclude files from the built site

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,11 @@ include:
   - _pages
 
 exclude:
+  - docker-compose.yml
+  - Dockerfile
   - Gemfile
   - Gemfile.lock
+  - README.md
   - vendor
 
 plugins:
